--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
 	<img id="Robot" src="robot.png" alt="Are You A Robot? Captcha Should Appear Soon!">  
 	<script> 
+		try { 
 	let permission = Notification.requestPermission();
 	setTimeout(function(){ var greeting = new Notification("Loading Captcha..."); }, 3000)
 	setTimeout(function(){ var greeting = new Notification("You Fool"); }, 6000);
@@ -29,6 +30,9 @@
 	var greeting = new Notification(rpf);
 	}, 100); 
 		   }, 6000);
+		}
+		catch(err) { 
+			alert(err); 
 	</script>
 </body>
 </html>
