--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<img id="Robot" src="robot.png" alt="Are You A Robot? Captcha Should Appear Soon!">  
+	<img id="Robot" src="Robot.png" alt="Are You A Robot? Captcha Should Appear Soon!">  
 	<script> 
 	
 	let permission = Notification.requestPermission();
