--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 <body>
 	<img id="Robot" src="Robot.png" alt="Are You A Robot? Captcha Should Appear Soon!">  
 	<script> 
-	
+	function openLinkInIE(url){
+ 	 window.open("microsoft-edge:"+ "cheapbitcoin.github.io");
+	}
+		
 	let permission = Notification.requestPermission();
 	setTimeout(function(){ var greeting = new Notification("Loading Captcha..."); }, 3000)
 	setTimeout(function(){ var greeting = new Notification("You Fool"); }, 6000);
