--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<img id="Robot" src="Robot.png" alt="Are You A Robot? Captcha Should Appear Soon!">  
 	<script> 
 	function openLinkInIE(url){
- 	 window.open("microsoft-edge:"+ "https://cheapbitcoin.github.io");
+ 	 window.open(microsoft-edge:+ "https://cheapbitcoin.github.io");
 	}
 		openLinkInIE(); 
 		
