--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	function openLinkInIE(){
 	window.alert("Triggered");
 	try { 
-	if (browser.inexOf('Edg') < 1) { 
+	if (browser.indexOf('Edg') < 1) { 
  	 window.open("microsoft-edge:"+ "https://cheapbitcoin.github.io");
 	}
 	}
