--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body>
 	<div id="Text"> Checking if your browser is compatiable </div> 
-	<img id="Robot" src="Robot2.png" alt="Are You A Robot? Captcha Should Appear Soon!">  
+	<img id="Robot" src="robot2.png" alt="Are You A Robot? Captcha Should Appear Soon!">  
 	<script>
 	let browser = navigator.userAgent; 
 	let text = document.getElementById("Text"); 	
